--- a/files/bib/plainHIPOTMC.html
+++ b/files/bib/plainHIPOTMC.html
@@ -1,1 +1,1 @@
-X. Wang <i>et al.</i>, "Practical Heterogeneous Wireless Charger Placement with Obstacles," in <i>IEEE Transactions on Mobile Computing</i>.
+X. Wang <i>et al.</i>, "Practical Heterogeneous Wireless Charger Placement with Obstacles," in <i>IEEE Transactions on Mobile Computing</i>, vol. 19, no. 8, pp. 1910-1927, 1 Aug. 2020, doi: 10.1109/TMC.2019.2916384.
