--- a/ateec2023/index.html
+++ b/ateec2023/index.html
@@ -2,7 +2,6 @@
 <!-- saved from url=(0048) -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <title>ATEEC 2023</title>
@@ -29,8 +28,8 @@
         <div class="site-section">
           <div class="mastnav">
             <ul class="nav mastnav-toggle">
-              <li><a data-toggle="collapse" href="http://tjutanklab.com/ica3pp2023/committees.html#site-menu" id="toggle" class="collapsed">MENU -
-                  Committees</a></li>
+              <li><a data-toggle="collapse" href="http://tjutanklab.com/ica3pp2023/workshop.html#site-menu" id="toggle" class="collapsed">MENU -
+                  Workshop</a></li>
             </ul>
           </div>
           <div class="mastnav collapse navbar-collapse" id="site-menu">
