--- a/ateec2023/index.html
+++ b/ateec2023/index.html
@@ -157,6 +157,8 @@
                 <h2>Program Committee</h2>
                 <p class="lead">
                     Gongming Zhao, University of Science and Technology of China, China<br />
+                    Li Ma, Shanghai Jiao Tong University, China<br />
+                    Lijie Xu, Nanjing University of Posts and Telecommunications, China<br />
                     Lizhao You, Xiamen University, China<br />
                     Meixuan Ren, Sichuan Normal University, China<br />
                     Meng Li, Nanjing University, China<br />
@@ -164,6 +166,7 @@
                     Nan Yu, State Key Laboratory of Air Traffic Management Systems and Technology, China<br />
                     Shihong Hu, Hohai University, China<br />
                     Tao Wu, National University of Defense Technology, China<br />
+                    Wei Wang, Central South University, China<br />
                     Wenzheng Xu, Sichuan University, China<br />
                     Xiaocan Wu, Soochow University, China<br />
                     Yuben Qu, Nanjing University of Aeronautics and Astronautics, China
