--- a/ateec2023/index.html
+++ b/ateec2023/index.html
@@ -151,7 +151,8 @@
                     Xiaoyu Wang, Soochow University, China<br />
                     Yang Du, Soochow University, China<br />
                     Haipeng Dai, Nanjing University, China<br />
-                    Pengfei Wang, Dalian University of Technology, China
+                    Pengfei Wang, Dalian University of Technology, China<br />
+                    Yuben Qu, Nanjing University of Aeronautics and Astronautics, China
                 </p>
 
                 <h2>Program Committee</h2>
@@ -168,8 +169,7 @@
                     Tao Wu, National University of Defense Technology, China<br />
                     Wei Wang, Central South University, China<br />
                     Wenzheng Xu, Sichuan University, China<br />
-                    Xiaocan Wu, Soochow University, China<br />
-                    Yuben Qu, Nanjing University of Aeronautics and Astronautics, China
+                    Xiaocan Wu, Soochow University, China
                 </p>
 
             </div>
