--- a/ateec2023/index.html
+++ b/ateec2023/index.html
@@ -119,7 +119,7 @@
                         Novel energy replenishment technologies for edge computing
                     </li>
                 </ul>
-                <p class="lead">Submitted manuscripts must be prepared according to Springer LNCS Format and submitted in PDF file format. The manuscript should be no longer than 12 pages. Submitted manuscripts must not contain previously published material or be under consideration for publication in another conference or journal. Accepted papers will be published in the workshop proceedings. At least one author of any accepted paper must register and present the paper at the conference.</p>
+                <p class="lead">Submitted manuscripts must be prepared according to LNCS Proceedings and submitted in PDF file format. The manuscript should be no longer than 12 pages with Springer LNCS Format. Submitted manuscripts must not contain previously published material or be under consideration for publication in another conference or journal. At least one author of any accepted paper must register and present the paper at the conference. After registration, selected accepted papers will be recommended to SCI journal SPECIAL ISSUE, such as COMNET, Sensors. We will plan it in the future.</p>
                 <p class="lead">
                     Submission link:
                     <a href="https://easychair.org/my/conference?conf=ica3pp2023" target="_blank">https://easychair.org/my/conference?conf=ica3pp2023</a> <br />
